--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table cellspacing=20px>
       <tr>
         <td>
-    <img src="C:\Users\Spazios\Desktop\2019 - Web Dev Bootcamp\IntroductiontoHTML\images\marianoimage.jpg" alt="Imagen de Perfil de Mariano De Simone">
+    <img src="images\marianoimage.jpg" alt="Imagen de Perfil de Mariano De Simone">
         </td>
         <td>
           <h1>Mariano De Simone</h1>
