--- a/index.html
+++ b/index.html
@@ -2,75 +2,55 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mariano's Personal Site</title>
+    <title>Mariano De Simone</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   </head>
-
-
   <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="">
+      <h1>I'm Mariano.</h1>
+      <h2>a <span class="pro">pro</span>grammer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="">
+      <img src="images/mountain.png" alt="">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="fotofb" src="images/fotofb.jpg" alt="">
+        <h2>Hello.</h2>
+        <p class="pmiddle">Soy experto en Marketing Digital y un desarrollador principiante con más ganas de desarrollar que otra cosa.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2 class="myskills">My Skills.</h2>
+        <div class="skill-row">
+          <img class="digital-img" src="images/digital.png" alt="">
+          <h3>Marketing Digital</h3>
+          <p  class="digital-skill-description">Hace doce años que hago marketing digital y he ayudado a muchas copañías y marcas a posicionarse y crecer a través de estretegias digitales.</p>
+        </div>
+        <div class="skill-row">
+          <img class="data-img" src="images/data.png " alt="">
+          <h3>Web Development</h3>
+          <p class="data-skill-description">Hace años que quieroser desarrollador y hace poco tiempo que me decidí a serlo. Soy beginner pero aprendiendo todos los días este arte.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Si quieres hablar de Marketing Digital o desarrollo, estoy a la orden.</h3>
+        <p>¿Necesitas ayuda para posicionar tu marca? Hablemos.</p>
+        <a class="myButton" href="mailto:desimone.mariano@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
 
-    <table cellspacing=20px>
-      <tr>
-        <td>
-    <img src="images\marianoimage.jpg" alt="Imagen de Perfil de Mariano De Simone">
-        </td>
-        <td>
-          <h1>Mariano De Simone</h1>
-        <p><em>Digital Marketing Expert and <strong><a href="#">Beginner Developer</a></strong></em></p>
-        <p>Soy un experto en marketing,ao el futbol pero quiero aprender a desarrollar sitios y aplicaicones</p>
-    </td>
-      </tr>
-    </table>
-    <hr>
-    <h3>Education</h3>
-    <ul>
-      <li><a href="#">San Patricio</a></li>
-      <li><a href="#">Saint Trinnean's</a></li>
-      <li><a href="#">Saint Edward's</a></li>
-      <li><a href="#">Universidad Catolica Argentina</a></li>
-      <li><a href="#">Escuela Europea de Negocios</a></li>
-    </ul>
-    <hr>
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Work</th>
-        </tr>
-      </thead>
 
-      <tbody>
-        <tr>
-          <td>2019</td>
-          <td>Jefe de Marketing</td>
-        </tr>
-        <tr>
-          <td>2018</td>
-          <td>Freelance</td>
-        </tr>
-      </tbody>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="pfooter">© 2018 Mariano De Simone.</p>
+    </div>
 
-    </table>
-    <hr>
-    <h3>Skills</h3>
-
-    <table cellspacing="10">
-      <tr>
-        <td> Brand Management</td>
-        <td>⭐⭐⭐⭐⭐</td>
-        <td> Brand Management</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td> HTML & CSS</td>
-        <td>⭐⭐⭐</td>
-        <td> Brand Management</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-    </table>
-
-    <hr>
-    <p><a href="hobbies.html">My Hobbies</a></p>
-    <p><a href="contactme.html">Contact Details</a></p>
-</body>
+  </body>
 </html>
