--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/marianodesimone/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://marianods81.github.io/cv/">Website</a>
       <p class="pfooter">© 2018 Mariano De Simone.</p>
     </div>
 
